# actix-demo

./: .clinerules  .dockerignore  .drone.yml  .env  .gitignore  Cargo.toml  Cross.toml  Dockerfile  Makefile.toml  README.md  app.db  bacon.toml  build.Dockerfile  ci.Dockerfile  ci.Dockerfile.dockerignore  curls  deps.txt  diesel.toml  docker-compose.metrics.yml  docker-compose.yaml  loki-config.yaml  ppc64le.Dockerfile  prometheus.yml  test.db  test_old.db
.github/workflows/: ci.yml
docker/: aarch64.Dockerfile  build2.Dockerfile  ppc64le.Dockerfile
docs/: auth.md  rate-limit.md
docs/enhancements/: avatar-feature.md  grafana_dashboard.json  graphql-integration.md  healthcheck.md  messaging-system.md  metrics.md  pet-profiles.md  rate-limit-testing.md
docs/plans/: 2026-05-25-account-deletion.md
migrations/2020-05-02-115427_create_users/: up.sql
migrations/2022-11-20-184352_add_roles/: down.sql  up.sql
migrations/2023-01-01-181019_jobs_table/: down.sql  up.sql
migrations/2026-02-11-133839_add_pet_profile/: down.sql  up.sql
migrations/2026-05-25-000000_soft_delete_users/: down.sql  up.sql
src/: actions.rs  config.rs  errors.rs  health.rs  lib.rs  main.rs  metrics.rs  middlewares.rs  models.rs  rate_limit.rs  routes.rs  schema.patch  schema.rs  services.rs  telemetry.rs  types.rs  utils.rs  workers.rs
src/.cargo/: config
src/actions/: misc.rs  pet_profile_delete.rs  pet_profile_full.rs  pet_profile_image_add.rs  pet_profile_image_delete.rs  pet_profile_insert.rs  pet_profile_update.rs  pet_profiles.rs  users.rs
src/actions/misc/: create_database.rs
src/errors/: domain_error.rs
src/middlewares/: csrf.rs  custom_headers.rs
src/models/: api_response.rs  defaults.rs  errors.rs  misc.rs  pet_activities.rs  pet_adoption_details.rs  pet_basic_info.rs  pet_enums.rs  pet_location_owner.rs  pet_personality_traits.rs  pet_profile_full.rs  pet_profile_images.rs  pet_profile_insert.rs  pet_profile_update.rs  pets.rs  rate_limit.rs  roles.rs  session.rs  users.rs  worker.rs  ws.rs
src/routes/: auth.rs  command.rs  healthcheck.rs  misc.rs  pets.rs  users.rs  ws.rs
src/services/: user_service.rs
src/utils/: auth.rs  broadcast_demo.rs  cookie_auth.rs  credentials_repo.rs  extra.rs  in_memory_credentials_repo.rs  in_memory_session_store.rs  instrumented_redis_cache.rs  no_op_rate_limiter.rs  ops.rs  rate_limit_backend.rs  redis_channel_reader.rs  redis_credentials_repo.rs  regex.rs  regexs.rs  ws.rs
src/utils/ws/: handlers.rs  msg_receive_loop.rs  process_client_message.rs  session_extension.rs  ws_loop.rs
src/utils/ws/handlers/: job_handler.rs  message_handler.rs  subscribe_job.rs
static/: index.html
templates/: hello.hbs
tests/integration/: auth.rs  docker-compose.it-test.yml  it-test.py  main.rs  misc.rs  pets.rs  users.rs  ws.rs
tests/integration/auth/: rate_limit.rs  session.rs
tests/integration/auth/session/: session_renewal.rs  sessions_api.rs
tests/integration/common/: mod.rs
