[package]
name = 'actix-demo'
version = '0.1.0'
authors = ['Rohan Sircar <rohansircar@protonmail.com>']
edition = '2021'

[dependencies]
actix-extensible-rate-limit = { version = "0.4.0", features = ["redis"] }
actix-files = "0.6.2"
actix-http = "3.2.2"
actix-rt = "2.7.0"
actix-web = "4.9.0"
actix-web-grants = "4.1.2"
actix-web-httpauth = "0.8.0"
actix-ws = "0.3.0"
anyhow = "1.0.66"
awc = "3.5.1"
bcrypt = "0.17.0"
chrono = { version = "0.4.40", features = ['serde'] }
custom_error = "1.9.2"
derive_more = { version = "2.0.1", features = ["display", "into"] }
diesel = { version = "2.2.7", features = [
    'r2d2',
    'chrono',
    'postgres',
    'uuid',
] }
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
diesel-tracing = { version = "0.3.1", features = ["postgres", "r2d2"] }
diesel_migrations = "2.2.0"
do-notation = "0.1.3"
dotenvy = "0.15"
envy = "0.4"
futures = "0.3.14"
jwt-simple = { version = "0.12.11", default-features = false, features = [
    "pure-rust",
] }
lazy_static = "1.4.0"
once_cell = "1.16.0"
process-stream = "0.4.1"
r2d2 = { version = "0.8" }
rand = "0.9.0"
redis = { version = "0.26.0", features = [
    "tokio-comp",
    "json",
    "connection-manager",
] }
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1.43.0", features = ["full"] }
tracing = { version = "0.1.41" }
tracing-actix-web = "0.7.15"
tracing-appender = "0.2.2"
tracing-bunyan-formatter = "0.3.4"
tracing-futures = "0.2.5"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.16", features = [
    "fmt",
    "registry",
    "env-filter",
] }
url = { version = "2.5.4" }
uuid = { version = "1.13.1", features = ["v4", "serde"] }
validators = { version = "0.25.3", features = ["serde"] }

[dev-dependencies]
actix-codec = "0.5.0"
actix-test = "0.1.0"
bytestring = { version = "1.2.0", features = ["serde"] }
derive_builder = "0.20.2"
testcontainers = "0.23.2"
testcontainers-modules = { version = "0.11.6", features = [
    "postgres",
    "redis",
] }
tokio-postgres = "0.7.7"

[dependencies.build-info]
version = "0.0.40"
features = ['runtime']

[dependencies.derive-new]
version = "0.7.0"

[dependencies.diesel-derive-newtype]
version = "2.1.2"

[build-dependencies]
build-info-build = { version = "0.0.40" }
